--- a/ImageClassification/MainWindow.xaml
+++ b/ImageClassification/MainWindow.xaml
@@ -1,12 +1,34 @@
-﻿<Window x:Class="ImageClassification.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ImageClassification"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+﻿<Window 
+	x:Class="ImageClassification.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:ImageClassification"
+    mc:Ignorable="d"
+    Title="MainWindow" Height="350" Width="525" AllowDrop="True">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="*"/>
+		</Grid.ColumnDefinitions>
+
+		<StackPanel>
+			<Button Content="学習" Click="Button_Click"/>
+			<ListBox ItemsSource="{Binding MachineInfo}"/>
+		</StackPanel>
+		<Grid Grid.Column="1">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"/>
+				<RowDefinition Height="Auto"/>
+			</Grid.RowDefinitions>
+			<Image Source="{Binding DropFileName.Value}"/>
+			<TextBlock Grid.Row="1" Text="{Binding DropResult.Value}" FontSize="16"/>
+		</Grid>
+		<TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding Message.Value}"/>
+	</Grid>
 </Window>
